[gd_scene load_steps=19 format=4 uid="uid://61xey3uih46o"]

[ext_resource type="Script" uid="uid://sxunwpqxn25j" path="res://player/player.gd" id="1"]

[sub_resource type="StandardMaterial3D" id="1"]
vertex_color_use_as_albedo = true

[sub_resource type="ArrayMesh" id="2"]
resource_name = "Cube"
_surfaces = [{
"aabb": AABB(-1, 4, -0.601627, 2, 2, 1.20326),
"attribute_data": PackedByteArray("AADAPgAAgD8AAAA+AACAPgAAwD4AAAAAAAAgPwAAgD8AACA/AAAAAAAAYD8AAIA+AADAPgAAQD8AAAA+AAAAPwAAwD4AAEA/AAAgPwAAQD8AACA/AABAPwAAYD8AAAA/AADAPgAAgD4AAMA+AACAPgAAwD4AAIA+AAAgPwAAgD4AACA/AACAPgAAID8AAIA+AADAPgAAAD8AAMA+AAAAPwAAwD4AAAA/AAAgPwAAAD8AACA/AAAAPwAAID8AAAA/"),
"bone_aabbs": [AABB(-1, 4, -0.601627, 2, 2, 1.20326)],
"format": 34359745559,
"index_count": 36,
"index_data": PackedByteArray("AAAJAAMAAAAGAAkACAAVAAoACAATABUAFAARABcAFAAOABEADQAEAA8ADQACAAQABwAMABIABwABAAwAFgAFAAsAFgAQAAUA"),
"material": SubResource("1"),
"primitive": 3,
"skin_data": PackedByteArray("AAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAA"),
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AACAvwAAgEA9BBo/AACAvwAAgEA9BBo/AACAvwAAgEA9BBo/AACAvwAAwEA9BBo/AACAvwAAwEA9BBo/AACAvwAAwEA9BBo/AACAvwAAgEA9BBq/AACAvwAAgEA9BBq/AACAvwAAgEA9BBq/AACAvwAAwEA9BBq/AACAvwAAwEA9BBq/AACAvwAAwEA9BBq/AACAPwAAgEA9BBo/AACAPwAAgEA9BBo/AACAPwAAgEA9BBo/AACAPwAAwEA9BBo/AACAPwAAwEA9BBo/AACAPwAAwEA9BBo/AACAPwAAgEA9BBq/AACAPwAAgEA9BBq/AACAPwAAgEA9BBq/AACAPwAAwEA9BBq/AACAPwAAwEA9BBq/AACAPwAAwEA9BBq//3///3MAAAD///+/Zg8AAP9///8AAAAA/3///28AAAD/f///Zw8AAAAA/78AAAAA/3///2QAAAD///+/YA8AAP9///8AAAAA/3///wAAAAD/f///Vw8AAAAA/78AAAAA////v0jhOj//f///AAAAP/9///9I4To//3///wAAAD8AAP+/SOE6P/9///8AAAA/////v0jhOj//f///AAAAP/9///9I4To//3///wAAAD8AAP+/SOE6P/9///8AAAA/")
}]

[sub_resource type="Skin" id="3"]
resource_name = "Skin"
bind_count = 7
bind/0/name = &"Hips"
bind/0/bone = -1
bind/0/pose = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.40991, 0)
bind/1/name = &"UpperLeg.R"
bind/1/bone = -1
bind/1/pose = Transform3D(4.37114e-08, 0, -1, 0, -1, 0, -1, 0, -4.37114e-08, 2.11335e-08, 4.13155, -0.483479)
bind/2/name = &"LowerLeg.R"
bind/2/bone = -1
bind/2/pose = Transform3D(7.54979e-08, 0, -1, 0, -1, 0, -1, 0, -7.54979e-08, 3.65016e-08, 2.34788, -0.483479)
bind/3/name = &"Foot.R"
bind/3/bone = -1
bind/3/pose = Transform3D(-7.54979e-08, -1, 0, 4.30333e-22, 5.69993e-15, 1, -1, 7.54979e-08, 0, 0.252805, -1.44097e-15, -0.483479)
bind/4/name = &"UpperLeg.L"
bind/4/bone = -1
bind/4/pose = Transform3D(4.37114e-08, 0, 1, 0, -1, 0, 1, 0, -4.37114e-08, -2.11335e-08, 4.13155, -0.483479)
bind/5/name = &"LowerLeg.L"
bind/5/bone = -1
bind/5/pose = Transform3D(7.54979e-08, 0, 1, 0, -1, 0, 1, 0, -7.54979e-08, -3.65016e-08, 2.34788, -0.483479)
bind/6/name = &"Foot.L"
bind/6/bone = -1
bind/6/pose = Transform3D(-7.54979e-08, 1, 0, -4.30333e-22, 5.69993e-15, 1, 1, 7.54979e-08, 0, -0.252805, -1.44097e-15, -0.483479)

[sub_resource type="StandardMaterial3D" id="4"]
vertex_color_use_as_albedo = true

[sub_resource type="ArrayMesh" id="5"]
resource_name = "FootL"
_surfaces = [{
"aabb": AABB(0.29319, 0.0425852, -0.171504, 0.4, 0.40001, 0.940152),
"attribute_data": PackedByteArray("AADAPgAAgD8AAAA+AACAPgAAwD4AAAAAAAAgPwAAgD8AAGA/AACAPgAAID8AAAAAAADAPgAAQD8AAMA+AABAPwAAAD4AAAA/AAAgPwAAQD8AACA/AABAPwAAYD8AAAA/AADAPgAAgD4AAMA+AACAPgAAwD4AAIA+AAAgPwAAgD4AACA/AACAPgAAID8AAIA+AADAPgAAAD8AAMA+AAAAPwAAwD4AAAA/AAAgPwAAAD8AACA/AAAAPwAAID8AAAA/"),
"bone_aabbs": [AABB(0, 0, 0, -1, -1, -1), AABB(0, 0, 0, -1, -1, -1), AABB(0, 0, 0, -1, -1, -1), AABB(0, 0, 0, -1, -1, -1), AABB(0, 0, 0, -1, -1, -1), AABB(0, 0, 0, -1, -1, -1), AABB(0.29319, 0.0425852, -0.171504, 0.4, 0.40001, 0.940152)],
"format": 34359745559,
"index_count": 36,
"index_data": PackedByteArray("AAAJAAMAAAAGAAkABwAVAAoABwASABUAFAARABcAFAAOABEADQAFABAADQACAAUACAAMABMACAABAAwAFgAEAAsAFgAPAAQA"),
"material": SubResource("4"),
"primitive": 3,
"skin_data": PackedByteArray("BgAAAAAAAAD//wAAAAAAAAYAAAAAAAAA//8AAAAAAAAGAAAAAAAAAP//AAAAAAAABgAAAAAAAAD//wAAAAAAAAYAAAAAAAAA//8AAAAAAAAGAAAAAAAAAP//AAAAAAAABgAAAAAAAAD//wAAAAAAAAYAAAAAAAAA//8AAAAAAAAGAAAAAAAAAP//AAAAAAAABgAAAAAAAAD//wAAAAAAAAYAAAAAAAAA//8AAAAAAAAGAAAAAAAAAP//AAAAAAAABgAAAAAAAAD//wAAAAAAAAYAAAAAAAAA//8AAAAAAAAGAAAAAAAAAP//AAAAAAAABgAAAAAAAAD//wAAAAAAAAYAAAAAAAAA//8AAAAAAAAGAAAAAAAAAP//AAAAAAAABgAAAAAAAAD//wAAAAAAAAYAAAAAAAAA//8AAAAAAAAGAAAAAAAAAP//AAAAAAAABgAAAAAAAAD//wAAAAAAAAYAAAAAAAAA//8AAAAAAAAGAAAAAAAAAP//AAAAAAAA"),
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("+hyWPoaa4j5oxUQ/+hyWPoaa4j5oxUQ/+hyWPoaa4j5oxUQ/+hyWPoua4j7Tni+++hyWPoua4j7Tni+++hyWPoua4j7Tni+++hyWPs5tLj1oxUQ/+hyWPs5tLj1oxUQ/+hyWPs5tLj1oxUQ/+hyWPvptLj3Vni+++hyWPvptLj3Vni+++hyWPvptLj3Vni++43QxP4aa4j5oxUQ/43QxP4aa4j5oxUQ/43QxP4aa4j5oxUQ/43QxP4ua4j7Tni++43QxP4ua4j7Tni++43QxP4ua4j7Tni++43QxP85tLj1oxUQ/43QxP85tLj1oxUQ/43QxP85tLj1oxUQ/43QxP/ptLj3Vni++43QxP/ptLj3Vni++43QxP/ptLj3Vni++/////wAAAAD///+/AAAAAP////8mvbum/////4+K974AAP+/ytcbvv////8AAAAA/////wAAAAD/////AAAAAP///78AAAAA/////wAAAAD/////0gKEsgAA/7+Oive+////v3/2tz//////AAAAAP////8AAIA/AAD/vzK9O7P/////AACAP/////9pIaIz/////x9ugb7///+/jor3vv////8AAAAA/////wAAAAAAAP+/EQAAAP////8AAAAA")
}]

[sub_resource type="StandardMaterial3D" id="6"]
vertex_color_use_as_albedo = true

[sub_resource type="ArrayMesh" id="7"]
resource_name = "FootR"
_surfaces = [{
"aabb": AABB(-0.703831, 0.0425852, -0.171504, 0.4, 0.40001, 0.940152),
"attribute_data": PackedByteArray("AADAPgAAgD8AAAA+AACAPgAAwD4AAAAAAAAgPwAAgD8AAGA/AACAPgAAID8AAAAAAADAPgAAQD8AAMA+AABAPwAAAD4AAAA/AAAgPwAAQD8AACA/AABAPwAAYD8AAAA/AADAPgAAgD4AAMA+AACAPgAAwD4AAIA+AAAgPwAAgD4AACA/AACAPgAAID8AAIA+AADAPgAAAD8AAMA+AAAAPwAAwD4AAAA/AAAgPwAAAD8AACA/AAAAPwAAID8AAAA/"),
"bone_aabbs": [AABB(0, 0, 0, -1, -1, -1), AABB(0, 0, 0, -1, -1, -1), AABB(0, 0, 0, -1, -1, -1), AABB(-0.703831, 0.0425852, -0.171504, 0.4, 0.40001, 0.940152)],
"format": 34359745559,
"index_count": 36,
"index_data": PackedByteArray("AAAJAAMAAAAGAAkABwAVAAoABwASABUAFAARABcAFAAOABEADQAFABAADQACAAUACAAMABMACAABAAwAFgAEAAsAFgAPAAQA"),
"material": SubResource("6"),
"primitive": 3,
"skin_data": PackedByteArray("AwAAAAAAAAD//wAAAAAAAAMAAAAAAAAA//8AAAAAAAADAAAAAAAAAP//AAAAAAAAAwAAAAAAAAD//wAAAAAAAAMAAAAAAAAA//8AAAAAAAADAAAAAAAAAP//AAAAAAAAAwAAAAAAAAD//wAAAAAAAAMAAAAAAAAA//8AAAAAAAADAAAAAAAAAP//AAAAAAAAAwAAAAAAAAD//wAAAAAAAAMAAAAAAAAA//8AAAAAAAADAAAAAAAAAP//AAAAAAAAAwAAAAAAAAD//wAAAAAAAAMAAAAAAAAA//8AAAAAAAADAAAAAAAAAP//AAAAAAAAAwAAAAAAAAD//wAAAAAAAAMAAAAAAAAA//8AAAAAAAADAAAAAAAAAP//AAAAAAAAAwAAAAAAAAD//wAAAAAAAAMAAAAAAAAA//8AAAAAAAADAAAAAAAAAP//AAAAAAAAAwAAAAAAAAD//wAAAAAAAAMAAAAAAAAA//8AAAAAAAADAAAAAAAAAP//AAAAAAAA"),
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("Ry40v4aa4j5oxUQ/Ry40v4aa4j5oxUQ/Ry40v4aa4j5oxUQ/Ry40v4ua4j7Tni++Ry40v4ua4j7Tni++Ry40v4ua4j7Tni++Ry40v85tLj1oxUQ/Ry40v85tLj1oxUQ/Ry40v85tLj1oxUQ/Ry40v/ptLj3Vni++Ry40v/ptLj3Vni++Ry40v/ptLj3Vni++wo+bvoaa4j5oxUQ/wo+bvoaa4j5oxUQ/wo+bvoaa4j5oxUQ/wo+bvoua4j7Tni++wo+bvoua4j7Tni++wo+bvoua4j7Tni++wo+bvs5tLj1oxUQ/wo+bvs5tLj1oxUQ/wo+bvs5tLj1oxUQ/wo+bvvptLj3Vni++wo+bvvptLj3Vni++wo+bvvptLj3Vni++/////wAAAAD///+/AAAAAP////8AAAAA/////wAAAAAAAP+/AAAAAP////8AAAAA/////wAAAAD/////AAAAAP///78AAAAA/////wAAAAD/////AAAAAAAA/78AAAAA////v+hVi0D/////cwjGvf/////ngmQ9AAD/v+hVi0D/////5gr/vf/////gGB4k//////wdjUD///+/54JkPf////8AAAAA//////wdjUAAAP+/AAAAAP////8AAAAA")
}]

[sub_resource type="StandardMaterial3D" id="8"]
vertex_color_use_as_albedo = true

[sub_resource type="ArrayMesh" id="9"]
resource_name = "LowerLegL"
_surfaces = [{
"aabb": AABB(0.29319, 0.489544, -0.2, 0.4, 1.85729, 0.40001),
"attribute_data": PackedByteArray("AADAPgAAgD8AAAA+AACAPgAAwD4AAAAAAAAgPwAAgD8AACA/AAAAAAAAYD8AAIA+AADAPgAAQD8AAAA+AAAAPwAAwD4AAEA/AAAgPwAAQD8AACA/AABAPwAAYD8AAAA/AADAPgAAgD4AAMA+AACAPgAAwD4AAIA+AAAgPwAAgD4AACA/AACAPgAAID8AAIA+AADAPgAAAD8AAMA+AAAAPwAAwD4AAAA/AAAgPwAAAD8AACA/AAAAPwAAID8AAAA/"),
"bone_aabbs": [AABB(0, 0, 0, -1, -1, -1), AABB(0, 0, 0, -1, -1, -1), AABB(0, 0, 0, -1, -1, -1), AABB(0, 0, 0, -1, -1, -1), AABB(0, 0, 0, -1, -1, -1), AABB(0.29319, 0.489544, -0.2, 0.4, 1.85729, 0.40001)],
"format": 34359745559,
"index_count": 36,
"index_data": PackedByteArray("AAAJAAMAAAAGAAkACAAVAAoACAATABUAFAARABcAFAAOABEADQAEAA8ADQACAAQABwAMABIABwABAAwAFgAFAAsAFgAQAAUA"),
"material": SubResource("8"),
"primitive": 3,
"skin_data": PackedByteArray("BQAAAAAAAAD//wAAAAAAAAUAAAAAAAAA//8AAAAAAAAFAAAAAAAAAP//AAAAAAAABQAAAAAAAAD//wAAAAAAAAUAAAAAAAAA//8AAAAAAAAFAAAAAAAAAP//AAAAAAAABQAAAAAAAAD//wAAAAAAAAUAAAAAAAAA//8AAAAAAAAFAAAAAAAAAP//AAAAAAAABQAAAAAAAAD//wAAAAAAAAUAAAAAAAAA//8AAAAAAAAFAAAAAAAAAP//AAAAAAAABQAAAAAAAAD//wAAAAAAAAUAAAAAAAAA//8AAAAAAAAFAAAAAAAAAP//AAAAAAAABQAAAAAAAAD//wAAAAAAAAUAAAAAAAAA//8AAAAAAAAFAAAAAAAAAP//AAAAAAAABQAAAAAAAAD//wAAAAAAAAUAAAAAAAAA//8AAAAAAAAFAAAAAAAAAP//AAAAAAAABQAAAAAAAAD//wAAAAAAAAUAAAAAAAAA//8AAAAAAAAFAAAAAAAAAP//AAAAAAAA"),
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("+hyWPoil+j7MzEw++hyWPoil+j7MzEw++hyWPoil+j7MzEw++hyWPpoyFkDMzEw++hyWPpoyFkDMzEw++hyWPpoyFkDMzEw++hyWPoil+j7MzEy++hyWPoil+j7MzEy++hyWPoil+j7MzEy++hyWPpoyFkDMzEy++hyWPpoyFkDMzEy++hyWPpoyFkDMzEy+43QxP4il+j7MzEw+43QxP4il+j7MzEw+43QxP4il+j7MzEw+43QxP5oyFkDMzEw+43QxP5oyFkDMzEw+43QxP5oyFkDMzEw+43QxP4il+j7MzEy+43QxP4il+j7MzEy+43QxP4il+j7MzEy+43QxP5oyFkDMzEy+43QxP5oyFkDMzEy+43QxP5oyFkDMzEy+/3///wAAAAD///+/AAAAAP9///8AAAAA/3///wAAAAD/f///AAAAAAAA/78AAAAA/3///wAAAAD///+/AAAAAP9///8AAAAA/3///wAAAAD/f///AAAAAAAA/78AAAAA////v//MZv//f////8xm//9/////zGb//3/////MZv8AAP+//8xm//9/////zGb/////v//MZv//f////8xm//9/////zGb//3/////MZv8AAP+//8xm//9/////zGb/")
}]

[sub_resource type="StandardMaterial3D" id="10"]
vertex_color_use_as_albedo = true

[sub_resource type="ArrayMesh" id="11"]
resource_name = "LowerLegR"
_surfaces = [{
"aabb": AABB(-0.703831, 0.489544, -0.2, 0.4, 1.85729, 0.40001),
"attribute_data": PackedByteArray("AADAPgAAgD8AAAA+AACAPgAAwD4AAAAAAAAgPwAAgD8AACA/AAAAAAAAYD8AAIA+AADAPgAAQD8AAAA+AAAAPwAAwD4AAEA/AAAgPwAAQD8AACA/AABAPwAAYD8AAAA/AADAPgAAgD4AAMA+AACAPgAAwD4AAIA+AAAgPwAAgD4AACA/AACAPgAAID8AAIA+AADAPgAAAD8AAMA+AAAAPwAAwD4AAAA/AAAgPwAAAD8AACA/AAAAPwAAID8AAAA/"),
"bone_aabbs": [AABB(0, 0, 0, -1, -1, -1), AABB(0, 0, 0, -1, -1, -1), AABB(-0.703831, 0.489544, -0.2, 0.4, 1.85729, 0.40001)],
"format": 34359745559,
"index_count": 36,
"index_data": PackedByteArray("AAAJAAMAAAAGAAkACAAVAAoACAATABUAFAARABcAFAAOABEADQAEAA8ADQACAAQABwAMABIABwABAAwAFgAFAAsAFgAQAAUA"),
"material": SubResource("10"),
"primitive": 3,
"skin_data": PackedByteArray("AgAAAAAAAAD//wAAAAAAAAIAAAAAAAAA//8AAAAAAAACAAAAAAAAAP//AAAAAAAAAgAAAAAAAAD//wAAAAAAAAIAAAAAAAAA//8AAAAAAAACAAAAAAAAAP//AAAAAAAAAgAAAAAAAAD//wAAAAAAAAIAAAAAAAAA//8AAAAAAAACAAAAAAAAAP//AAAAAAAAAgAAAAAAAAD//wAAAAAAAAIAAAAAAAAA//8AAAAAAAACAAAAAAAAAP//AAAAAAAAAgAAAAAAAAD//wAAAAAAAAIAAAAAAAAA//8AAAAAAAACAAAAAAAAAP//AAAAAAAAAgAAAAAAAAD//wAAAAAAAAIAAAAAAAAA//8AAAAAAAACAAAAAAAAAP//AAAAAAAAAgAAAAAAAAD//wAAAAAAAAIAAAAAAAAA//8AAAAAAAACAAAAAAAAAP//AAAAAAAAAgAAAAAAAAD//wAAAAAAAAIAAAAAAAAA//8AAAAAAAACAAAAAAAAAP//AAAAAAAA"),
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("Ry40v4il+j7MzEw+Ry40v4il+j7MzEw+Ry40v4il+j7MzEw+Ry40v5oyFkDMzEw+Ry40v5oyFkDMzEw+Ry40v5oyFkDMzEw+Ry40v4il+j7MzEy+Ry40v4il+j7MzEy+Ry40v4il+j7MzEy+Ry40v5oyFkDMzEy+Ry40v5oyFkDMzEy+Ry40v5oyFkDMzEy+wo+bvoil+j7MzEw+wo+bvoil+j7MzEw+wo+bvoil+j7MzEw+wo+bvpoyFkDMzEw+wo+bvpoyFkDMzEw+wo+bvpoyFkDMzEw+wo+bvoil+j7MzEy+wo+bvoil+j7MzEy+wo+bvoil+j7MzEy+wo+bvpoyFkDMzEy+wo+bvpoyFkDMzEy+wo+bvpoyFkDMzEy+/3///wAAAAD///+/AAAAAP9///8AAAAA/3///wAAAAD/f///AAAAAAAA/78AAAAA/3///wAAAAD///+/AAAAAP9///8AAAAA/3///wAAAAD/f///AAAAAAAA/78AAAAA////v3jpFkD/f///AADgP/9///+xMjZA/3///3npFkAAAP+/RYUAQP9///8WOUNA////v+WTFMD/f///AADgP/9///+xMjZA/3///3npFkAAAP+/RYUAQP9///8WOUNA")
}]

[sub_resource type="StandardMaterial3D" id="12"]
vertex_color_use_as_albedo = true

[sub_resource type="ArrayMesh" id="13"]
resource_name = "UpperLegL"
_surfaces = [{
"aabb": AABB(0.29319, 2.39093, -0.2, 0.4, 1.6, 0.40001),
"attribute_data": PackedByteArray("AADAPgAAgD8AAAA+AACAPgAAwD4AAAAAAAAgPwAAgD8AACA/AAAAAAAAYD8AAIA+AADAPgAAQD8AAAA+AAAAPwAAwD4AAEA/AAAgPwAAQD8AACA/AABAPwAAYD8AAAA/AADAPgAAgD4AAMA+AACAPgAAwD4AAIA+AAAgPwAAgD4AACA/AACAPgAAID8AAIA+AADAPgAAAD8AAMA+AAAAPwAAwD4AAAA/AAAgPwAAAD8AACA/AAAAPwAAID8AAAA/"),
"bone_aabbs": [AABB(0, 0, 0, -1, -1, -1), AABB(0, 0, 0, -1, -1, -1), AABB(0, 0, 0, -1, -1, -1), AABB(0, 0, 0, -1, -1, -1), AABB(0.29319, 2.39093, -0.2, 0.4, 1.6, 0.40001)],
"format": 34359745559,
"index_count": 36,
"index_data": PackedByteArray("AAAJAAMAAAAGAAkACAAVAAoACAATABUAFAARABcAFAAOABEADQAEAA8ADQACAAQABwAMABIABwABAAwAFgAFAAsAFgAQAAUA"),
"material": SubResource("12"),
"primitive": 3,
"skin_data": PackedByteArray("BAAAAAAAAAD//wAAAAAAAAQAAAAAAAAA//8AAAAAAAAEAAAAAAAAAP//AAAAAAAABAAAAAAAAAD//wAAAAAAAAQAAAAAAAAA//8AAAAAAAAEAAAAAAAAAP//AAAAAAAABAAAAAAAAAD//wAAAAAAAAQAAAAAAAAA//8AAAAAAAAEAAAAAAAAAP//AAAAAAAABAAAAAAAAAD//wAAAAAAAAQAAAAAAAAA//8AAAAAAAAEAAAAAAAAAP//AAAAAAAABAAAAAAAAAD//wAAAAAAAAQAAAAAAAAA//8AAAAAAAAEAAAAAAAAAP//AAAAAAAABAAAAAAAAAD//wAAAAAAAAQAAAAAAAAA//8AAAAAAAAEAAAAAAAAAP//AAAAAAAABAAAAAAAAAD//wAAAAAAAAQAAAAAAAAA//8AAAAAAAAEAAAAAAAAAP//AAAAAAAABAAAAAAAAAD//wAAAAAAAAQAAAAAAAAA//8AAAAAAAAEAAAAAAAAAP//AAAAAAAA"),
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("+hyWPgAFGUDMzEw++hyWPgAFGUDMzEw++hyWPgAFGUDMzEw++hyWPmZrf0DMzEw++hyWPmZrf0DMzEw++hyWPmZrf0DMzEw++hyWPgAFGUDMzEy++hyWPgAFGUDMzEy++hyWPgAFGUDMzEy++hyWPmZrf0DMzEy++hyWPmZrf0DMzEy++hyWPmZrf0DMzEy+43QxPwAFGUDMzEw+43QxPwAFGUDMzEw+43QxPwAFGUDMzEw+43QxP2Zrf0DMzEw+43QxP2Zrf0DMzEw+43QxP2Zrf0DMzEw+43QxPwAFGUDMzEy+43QxPwAFGUDMzEy+43QxPwAFGUDMzEy+43QxP2Zrf0DMzEy+43QxP2Zrf0DMzEy+43QxP2Zrf0DMzEy+/3///wAAAAD///+/AAAAAP9///8AAAAA/3///wAAAAD/f///AAAAAAAA/78AAAAA/3///wAAAAD///+/AAAAAP9///8AAAAA/3///wAAAAD/f///AAAAAAAA/78AAAAA////vxYBAAD/f///QQAFAP9///+yAQAA/3///7EBAAAAAP+/sgEAAP9///9RAAUA////v7MBAAD/f///MgAAAP9///9CAAAA/3///xMBAAAAAP+/PgADAP9///+zAQAA")
}]

[sub_resource type="StandardMaterial3D" id="14"]
vertex_color_use_as_albedo = true

[sub_resource type="ArrayMesh" id="15"]
resource_name = "UpperLegR"
_surfaces = [{
"aabb": AABB(-0.703831, 2.39093, -0.2, 0.4, 1.6, 0.40001),
"attribute_data": PackedByteArray("AADAPgAAgD8AAAA+AACAPgAAwD4AAAAAAAAgPwAAgD8AACA/AAAAAAAAYD8AAIA+AADAPgAAQD8AAAA+AAAAPwAAwD4AAEA/AAAgPwAAQD8AACA/AABAPwAAYD8AAAA/AADAPgAAgD4AAMA+AACAPgAAwD4AAIA+AAAgPwAAgD4AACA/AACAPgAAID8AAIA+AADAPgAAAD8AAMA+AAAAPwAAwD4AAAA/AAAgPwAAAD8AACA/AAAAPwAAID8AAAA/"),
"bone_aabbs": [AABB(0, 0, 0, -1, -1, -1), AABB(-0.703831, 2.39093, -0.2, 0.4, 1.6, 0.40001)],
"format": 34359745559,
"index_count": 36,
"index_data": PackedByteArray("AAAJAAMAAAAGAAkACAAVAAoACAATABUAFAARABcAFAAOABEADQAEAA8ADQACAAQABwAMABIABwABAAwAFgAFAAsAFgAQAAUA"),
"material": SubResource("14"),
"primitive": 3,
"skin_data": PackedByteArray("AQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAAAQAAAAAAAAD//wAAAAAAAAEAAAAAAAAA//8AAAAAAAABAAAAAAAAAP//AAAAAAAA"),
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("Ry40vwAFGUDMzEw+Ry40vwAFGUDMzEw+Ry40vwAFGUDMzEw+Ry40v2Zrf0DMzEw+Ry40v2Zrf0DMzEw+Ry40v2Zrf0DMzEw+Ry40vwAFGUDMzEy+Ry40vwAFGUDMzEy+Ry40vwAFGUDMzEy+Ry40v2Zrf0DMzEy+Ry40v2Zrf0DMzEy+Ry40v2Zrf0DMzEy+wo+bvgAFGUDMzEw+wo+bvgAFGUDMzEw+wo+bvgAFGUDMzEw+wo+bvmZrf0DMzEw+wo+bvmZrf0DMzEw+wo+bvmZrf0DMzEw+wo+bvgAFGUDMzEy+wo+bvgAFGUDMzEy+wo+bvgAFGUDMzEy+wo+bvmZrf0DMzEy+wo+bvmZrf0DMzEy+wo+bvmZrf0DMzEy+/3///wAAAAD///+/AAAAAP9///8AAAAA/3///wAAAAD/f///AAAAAAAA/78AAAAA/3///wAAAAD///+/AAAAAP9///8AAAAA/3///wAAAAD/f///AAAAAAAA/78AAAAA////v83MTD//f///AACAP/9////NzEw//3///wAAgD8AAP+/zcxMPv9///8AAIA/////v83MTD7/f///AACAP/9///89Clc//3///wAAgD8AAP+/PQpXP/9///8AAIA/")
}]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_oul6g"]
radius = 1.25595
height = 6.12106

[sub_resource type="SphereMesh" id="17"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1")
speed_change_rate = 6.75
foot_bone_dist_to_ground = 0.25
step_anim_time = 1.0
directional_delta = 3.0
step_anim_height = 1.5

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)

[node name="CameraBoom" type="SpringArm3D" parent="CameraPivot"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
spring_length = 15.0

[node name="Camera3D" type="Camera3D" parent="CameraPivot/CameraBoom"]
current = true

[node name="Armature" type="Node3D" parent="."]

[node name="Skeleton3D" type="Skeleton3D" parent="Armature"]
bones/0/name = "Hips"
bones/0/parent = -1
bones/0/rest = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.40991, 0)
bones/0/enabled = true
bones/0/position = Vector3(0, 4.40991, 0)
bones/0/rotation = Quaternion(0, 0, 0, 1)
bones/0/scale = Vector3(1, 1, 1)
bones/1/name = "UpperLeg.R"
bones/1/parent = 0
bones/1/rest = Transform3D(0, 0, -1, 0, -1, 0, -1, 0, 0, -0.483479, -0.278367, 1.3027e-15)
bones/1/enabled = true
bones/1/position = Vector3(-0.483479, -0.278367, 1.3027e-15)
bones/1/rotation = Quaternion(0.707107, 0, -0.707107, 0)
bones/1/scale = Vector3(1, 1, 1)
bones/2/name = "LowerLeg.R"
bones/2/parent = 1
bones/2/rest = Transform3D(1, 0, 3.17865e-08, 0, 1, 0, -3.17865e-08, 0, 1, -9.47312e-16, 1.78367, -2.98023e-08)
bones/2/enabled = true
bones/2/position = Vector3(-9.47312e-16, 1.78367, -2.98023e-08)
bones/2/rotation = Quaternion(0, 1.58932e-08, 0, 1)
bones/2/scale = Vector3(1, 1, 1)
bones/3/name = "Foot.R"
bones/3/parent = 2
bones/3/rest = Transform3D(0, -1, -7.54979e-08, 1, 0, -7.54979e-08, 7.54979e-08, -7.54979e-08, 1, 2.25001e-15, 2.09508, -2.98023e-08)
bones/3/enabled = true
bones/3/position = Vector3(2.25001e-15, 2.09508, -2.98023e-08)
bones/3/rotation = Quaternion(0, -5.33851e-08, 0.707107, 0.707107)
bones/3/scale = Vector3(1, 1, 1)
bones/4/name = "UpperLeg.L"
bones/4/parent = 0
bones/4/rest = Transform3D(0, 0, 1, 0, -1, 0, 1, 0, 0, 0.483479, -0.278367, 1.3027e-15)
bones/4/enabled = true
bones/4/position = Vector3(0.483479, -0.278367, 1.3027e-15)
bones/4/rotation = Quaternion(0.707107, 0, 0.707107, 0)
bones/4/scale = Vector3(1, 1, 1)
bones/5/name = "LowerLeg.L"
bones/5/parent = 4
bones/5/rest = Transform3D(1, 0, -3.17865e-08, 0, 1, 0, 3.17865e-08, 0, 1, 9.47312e-16, 1.78367, -2.98023e-08)
bones/5/enabled = true
bones/5/position = Vector3(9.47312e-16, 1.78367, -2.98023e-08)
bones/5/rotation = Quaternion(0, -1.58932e-08, 0, 1)
bones/5/scale = Vector3(1, 1, 1)
bones/6/name = "Foot.L"
bones/6/parent = 5
bones/6/rest = Transform3D(0, 1, 7.54979e-08, -1, 0, -7.54979e-08, -7.54979e-08, -7.54979e-08, 1, -2.25001e-15, 2.09508, -2.98023e-08)
bones/6/enabled = true
bones/6/position = Vector3(-2.25001e-15, 2.09508, -2.98023e-08)
bones/6/rotation = Quaternion(0, 5.33851e-08, -0.707107, 0.707107)
bones/6/scale = Vector3(1, 1, 1)

[node name="Cube" type="MeshInstance3D" parent="Armature/Skeleton3D"]
mesh = SubResource("2")
skin = SubResource("3")

[node name="FootL" type="MeshInstance3D" parent="Armature/Skeleton3D"]
mesh = SubResource("5")
skin = SubResource("3")

[node name="FootR" type="MeshInstance3D" parent="Armature/Skeleton3D"]
mesh = SubResource("7")
skin = SubResource("3")

[node name="LowerLegL" type="MeshInstance3D" parent="Armature/Skeleton3D"]
mesh = SubResource("9")
skin = SubResource("3")

[node name="LowerLegR" type="MeshInstance3D" parent="Armature/Skeleton3D"]
mesh = SubResource("11")
skin = SubResource("3")

[node name="UpperLegL" type="MeshInstance3D" parent="Armature/Skeleton3D"]
mesh = SubResource("13")
skin = SubResource("3")

[node name="UpperLegR" type="MeshInstance3D" parent="Armature/Skeleton3D"]
mesh = SubResource("15")
skin = SubResource("3")

[node name="LeftLeg" type="SkeletonIK3D" parent="Armature/Skeleton3D"]
process_priority = 1
root_bone = &"UpperLeg.L"
tip_bone = &"Foot.L"
override_tip_basis = false
use_magnet = true
magnet = Vector3(0.5, 0, 6)
target_node = NodePath("../../../LeftLegControl")

[node name="RightLeg" type="SkeletonIK3D" parent="Armature/Skeleton3D"]
process_priority = 1
root_bone = &"UpperLeg.R"
tip_bone = &"Foot.R"
override_tip_basis = false
use_magnet = true
magnet = Vector3(-0.5, 0, 6)
target_node = NodePath("../../../RightLegControl")

[node name="LeftLegControl" type="Marker3D" parent="."]

[node name="RightLegControl" type="Marker3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0228981, 3.18758, 0.0790406)
shape = SubResource("CapsuleShape3D_oul6g")
debug_color = Color(0, 0.6, 0.701961, 1)

[node name="PropLeftLegPos" type="Marker3D" parent="."]

[node name="Indicator" type="MeshInstance3D" parent="PropLeftLegPos"]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 0, 0)
mesh = SubResource("17")

[node name="PropRightLegPos" type="Marker3D" parent="."]

[node name="Indicator" type="MeshInstance3D" parent="PropRightLegPos"]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 0, 0)
mesh = SubResource("17")

[node name="PropLeftLegPosToGround" type="Marker3D" parent="."]

[node name="Indicator" type="MeshInstance3D" parent="PropLeftLegPosToGround"]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 0, 0)
mesh = SubResource("17")

[node name="PropRightLegPosToGround" type="Marker3D" parent="."]

[node name="Indicator" type="MeshInstance3D" parent="PropRightLegPosToGround"]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 0, 0)
mesh = SubResource("17")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.707107, 0.353553, -0.612372, 0, 0.866025, 0.5, 0.707107, -0.353553, 0.612372, -6.66141, 7.78124, 6.66141)
